--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,106 +5,130 @@ body {
 }
 
 #mainNav {
-    background-color: #fff;
+    background-color: rgb(255 255 255 / .5);
     text-transform: uppercase;
-    color: #51624E;
+    color: #343f32;
+    min-height: 62px;
 }
 
 #mainNav .navbar-toggler {
     padding: 0.75rem;
-    color: #51624E;
+    color: #343f32;
     border: 1px solid #33705e;
 }
 
 #mainNav .navbar-brand {
     font-weight: 700;
     padding: .9rem 0;
-    color: #51624E;
+    color: #343f32;
 }
 
 .navbar-brand, .nav-item {
     font-size: 1.2rem;
-    color: #51624E;
+    color: #343f32;
 }
 
 #mainNav .navbar-nav .nav-item:hover {
-    color: #51624E;
+    color: #343f32;
     outline: none;
     background-color: transparent;
-}
-
-@media (min-width: 540px) {
-    #mainNav {
-        border-color: transparent;
-        background-color: #fff;
-        transition: background-color 0.3s ease-in-out;
-    }
-
-    #mainNav .nav-link {
-        -webkit-transition: none;
-        transition: none;
-        padding: 2rem 1rem;
-    }
-
-    #mainNav .nav-link:hover {
-        color: #51624E;
-    }
-
-    #mainNav .nav-link:active {
-        color: #51624E;
-    }
-
-    #mainNav.navbar-shrink {
-        background-color: #fff;
-    }
-
-    #mainNav.navbar-shrink .navbar-brand {
-        color: #51624E;
-    }
-
-    #mainNav.navbar-shrink .nav-link {
-        color: #51624E;
-        padding: 1.5rem 1.5rem 1.25rem;
-        border-bottom: 0.25rem solid transparent;
-    }
-
-    #mainNav.navbar-shrink .nav-link:hover {
-        color: #51624E;
-    }
-
-    #mainNav.navbar-shrink .nav-link:active {
-        color: #51624E;
-    }
-
-    #mainNav.navbar-shrink .nav-link.active {
-        color: #51624E;
-        outline: none;
-        border-bottom: 0.25rem solid #51624E;
-    }
-}
-
-@media (max-width: 540px) {
-    .navbar-brand, .nav-item {
-        font-size: 2rem;
-    }
 }
 
 .hidden {
     display: none;
 }
 
-@media (min-width: 1440px) {
+header.masthead {
+        padding-left: 20%;
+        height: 100vh;
+    }
+
+#learnmore {
+    padding-top: 30rem;
+    padding-right: 10rem;
+    }
+
+
+.section-heading {
+    text-shadow: 0px 0px 1px #000;
+    margin-top: 5rem;
+    font-family: 'League Spartan', sans-serif;
+    font-weight: 600;
+}
+
+#portfoliobox {
+    padding: 3rem;
+    padding: 1rem;
+    background-color: #fff;
+}
+
+.nav-tabs {
+    background-color: #fff;
+}
+
+#nav-tab .nav-link {
+    border: 0px;
+    background-color: #fff;
+}
+
+#nav-tab .nav-link.active  {
+    border: 0px;
+    color: #fff;
+    background-color: #33705e;
+}
+
+.col-auto,
+.col-md {
+    padding: 1rem;
+}
+
+.btn-light {
+    background-color: #D1E1CE;
+    border-color: #343f32;
+}
+
+.btn-light:hover {
+    background-color: #343f32;
+    color: #D1E1CE;
+}
+
+a {
+    text-decoration: none;
+    font-weight: 600;
+}
+
+
+@media (min-width: 1040px) {
+    body {
+        background-image: url("../images/background.png");
+        background-position-x: center;
+        background-position-y: .5rem;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-color: #D1E1CE;
+    }
+
 header.masthead {
     padding-top: 10rem;
     padding-left: 20%;
     height: 100vh;
-    background-color: #D1E1CE;
-    background-position: center center;
-    background-size: cover;
 }
 
 #learnmore {
+    padding-top: 30rem;
     padding-right: 10rem;
+}
+
+#profilepic {
+    margin-left: 10rem;
+}
+
+#aboutsection {
+    padding-top: 10rem;
+}
+
+#portfolio .section-heading {
+    padding-top: 2rem;
 }
 
 #about, #portfolio {
@@ -112,99 +136,64 @@ header.masthead {
 }
 }
 
-header.masthead {
+
+@media (max-width: 1040px) {
+    body {
+        background-image: url("../images/mobilebg.png");
+        background-position: top;
+        background-size: auto 100%;
+        background-repeat: no-repeat;
+        background-color: #D1E1CE;
+    }
+
+    #mainNav {
+        background-color: #fff;
+    }
+
+    header.masthead { 
         padding-left: 20%;
         height: 100vh;
-        background-color: #D1E1CE;
-        background-position: center center;
-        background-size: cover;
-    }
+    } 
 
-#learnmore {
-        padding-right: 10rem;
-    }
-
-.bg-primary, .bg-dark, .bg-mid {
-    padding: 3rem;    
-    padding-bottom: 3rem;
-}
-
-.bg-primary {
-    background-color: #E9EFE7 !important;
-}
-
-.bg-dark {
-    background-color: #6b8a64 !important;
-}
-
-.bg-mid {
-    background-color: #465343 !important;
-}
-
-
-
-.section-heading {
-    text-shadow: 1px 1px 1px #000;
-    margin-top: 5rem;
-    font-family: 'League Spartan', sans-serif;
-    font-weight: 600;
-}
-
-
-@media (min-width: 540px) {
-#profilepic {
-    margin-top: 5rem;
-}
-
-#portfolioCarousel {
-    height: 30rem;
-}
-
-#gallery {
-    max-height: 30rem;
-    padding-bottom: 10rem;
-}
-
-.carousel-caption {
-    margin-top: 5rem;
-}
-}
-
-@media (max-width: 540px) {
-    #learnmore,
     #profilepic {
-        margin-top: 5rem;
+        scale: .75;
+        margin-top: 1rem;        
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+
+    #about .section-heading {
+        margin-top: 0rem;
     }
 
     #biotext {
         font-size: 95%;
-    }
-    .card-deck {
-        width: auto;
-        font-size: 90%;
+        text-align: center !important;
+        background-color: #D1E1CE;
     }
 
-    #portfolioCarousel {
-        height: 30rem;
+    #portfolio .section-heading {
+        padding-top: 2rem;
     }
-    
-    #gallery {
-        max-height: 30rem;
-        padding-bottom: 15rem;
+
+    #about, #portfolio {
+        height: 100vh;
+    } 
+
+    #portfoliobox {
+        padding: 0;
     }
-    
-    .carousel-caption {
-        margin-top: 5rem;
+
+    button.nav-link {
+        padding: .5rem;
     }
-}
 
+    .col-auto{
+        padding: 1.5rem;
+    }
+    .col-md {
+        padding: 2rem;
+    }
 
-a.portfolio-box {
-    color: #fff;
-    text-decoration: none;
-}
+} 
 
-a {
-    text-decoration: none;
-    font-weight: 600;
-}
